tests/textual/error/chooseUnit-wrong-type.uplc
(program 0.0.0 [[(force(builtin chooseUnit)) (con string "Ola")] (con integer 2)])